# cppboot

./: CMakeLists.txt  init.sh  readme.md
app/: CMakeLists.txt  main.cpp
cmake/: AddGoogleTest.cmake
src/: CMakeLists.txt  lib.cpp
test/: CMakeLists.txt  test.cpp
